2009-08-05  Sam Steingold  <sds@gnu.org>

	use gnulib in syscalls (just string-time for now)
	* Makefile.devel (MAKEFILE_IN): add modules/syscalls/gllib/Makefile
	* modules/syscalls/Makefile.in (libgnu_sc.a): add target
	* modules/syscalls/calls.c (STRING-TIME): implement unconditionally
	* modules/syscalls/posix.lisp (STRING-TIME): export unconditionally
	* modules/syscalls/configure.in: call sc_gl_EARLY, sc_gl_INIT,
	gl_FUNC_MKTIME, gl_FUNC_GNU_STRFTIME, gl_FUNC_STRPTIME;
	do not check for strftime strptime mktime
	* modules/syscalls/link.sh.in (NEW_FILES): add libgnu_sc.a
	* modules/syscalls/gllib/, modules/syscalls/glm4/: add

2009-08-05  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (gnulib-imported): import no-c++
	* makemake.in (SUBDIRS): disable c++ using NO_CXX for gettimeofday.c
	* configure.in, modules/regexp/configure.in: call gt_NO_CXX
	* modules/regexp/Makefile.in (libgnu_rx.a): pass NO_CXX in CFLAGS
	to gllib because regex cannot be compiled with c++

2009-08-05  Sam Steingold  <sds@gnu.org>

	build modules without linking them over
	* configure: do not link module directories into the build directory
	* makemake.in (anymodule): do not link the module directory,
	run configure in place or link Makefile
	* lndir: remove
	* modules/berkeley-db/Makefile.in, modules/bindings/glibc/Makefile:
	* modules/bindings/win32/Makefile, modules/clx/mit-clx/Makefile:
	* modules/clx/new-clx/Makefile.in, modules/dbus/Makefile.in:
	* modules/dirkey/Makefile.in, modules/fastcgi/Makefile.in:
	* modules/gdbm/Makefile.in, modules/gtk2/Makefile.in:
	* modules/i18n/Makefile.in, modules/libsvm/Makefile:
	* modules/matlab/Makefile, modules/netica/Makefile:
	* modules/oracle/Makefile.in, modules/pari/Makefile.in:
	* modules/pcre/Makefile.in, modules/postgresql/Makefile.in:
	* modules/queens/Makefile, modules/rawsock/Makefile.in:
	* modules/readline/Makefile.in, modules/regexp/Makefile.in:
	* modules/syscalls/Makefile.in, modules/wildcard/Makefile.in: